# Course_crusader

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASES_3-5_SUMMARY.md  PHASE_6_SUMMARY.md  README.md  URL_CAPTURE_VERIFICATION.md  generate_50_universities.py  pyproject.toml  requirements.txt  setup.py  test_real_scraping.py
.github/workflows/: ci.yml
coursecrusader/: __init__.py  cli.py  database.py  middlewares.py  models.py  performance.py  pipelines.py  refresh.py  schema.py  settings.py  validation.py
coursecrusader/parsers/: __init__.py  pdf_parser.py  prerequisites.py  text_utils.py
coursecrusader/scrapers/: __init__.py  base.py  registry.py
coursecrusader/scrapers/universities/: __init__.py  asu.py  berkeley.py  boston_u.py  brown.py  caltech.py  carnegie_mellon.py  case_western.py  colorado.py  columbia.py  cornell.py  dartmouth.py  duke.py  florida.py  georgia_tech.py  harvard.py  indiana.py  maryland.py  minnesota.py  mit.py  northwestern.py  notre_dame.py  nyu.py  ohio_state.py  penn_state.py  pitt.py  princeton.py  purdue.py  rice.py  rochester.py  rutgers.py  stanford.py  test.py  test1.py  test2.py  test3.py  tufts.py  ucd.py  uci.py  ucla.py  (+15 more)
scripts/: automated_refresh.py  crontab.example
tests/: __init__.py  test_integration.py  test_mit_scraper.py  test_models.py  test_prerequisites.py  test_schema.py  test_text_utils.py  test_url_capture.py
